--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <li class="navItem">
             <a href="#applicazioni">Applicazioni</a>
         </li>
+        <li class="navItem">
+            <a href="#video">Video</a>
+        </li>
         <li id="github-logo">
             <a target=”_blank” href="https://github.com/LuMarans30">
                 <!-- icona di fontawesome che rimanda alla mia pagina github -->
@@ -313,6 +316,12 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+    </div>
+    <hr id="video">
+    <div class="d-flex flex-column flex-shrink-0 p-4">
+        <div class="container">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NaoSp4NpkGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     <script>
