--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
     <hr id="video">
     <div class="d-flex flex-column flex-shrink-0 p-4">
         <div class="container">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NaoSp4NpkGg" title="TED Talk Li-Fi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NaoSp4NpkGg" title="TED Talk Li-Fi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
         </div>
     </div>
     <script>
