--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         Quindi ogni dispositivo deve avere un ricetrasmettitore.
                                     </li>
                                     <li>
-                                        La portata del fascio di luce è limtata alla curva fotometrica della sorgente.
+                                        La portata del fascio di luce è limitata alla curva fotometrica della sorgente.
                                     </li>
 
                                 </ul>
