--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                 <i class="fab fa-github fa-github-gradient fa-2x"></i>
             </a>
         </li>
+        <li class="navItem">
+            <a class="btn btn-outline-dark" href="/users/googleauth" role="button" style="text-transform:none">
+                <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+                Login with Google
+            </a>
+        </li>
     </nav>
 
     <!-- Contenitore per rendere responsive il paragrafo (bootstrap) -->
@@ -332,7 +338,6 @@
             </iframe>
         </div>
     </div>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <script>
         function onSignIn(googleUser) {
             // Useful data for your client-side scripts:
