--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
 
     <div id="g_id_onload"
          data-client_id="323824111948-scqqpbav49em320p2r7s21oojrbj04rt.apps.googleusercontent.com"
-         data-callback="handleCredentialResponse"
-         data-your_own_param_1_to_login="any_value"
-         data-your_own_param_2_to_login="any_value">
+         data-context="signin"
+         data-login_uri="https://lumarans30.github.io/lifi/"
+         data-auto_select="true">
     </div>
 
     <script>
