--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
     <div id="g_id_onload"
          data-client_id="323824111948-scqqpbav49em320p2r7s21oojrbj04rt.apps.googleusercontent.com"
          data-context="signin"
+         z-index="3"
          data-login_uri="https://lumarans30.github.io/lifi/"
          data-auto_select="true">
     </div>
