--- a/index.html
+++ b/index.html
@@ -332,25 +332,13 @@
         </div>
     </div>
 
-    <script>
-        function handleCredentialResponse(response) {
-            // Here we can do whatever process with the response we want
-            // Note that response.credential is a JWT ID token
-            console.log("Encoded JWT ID token: " + response.credential);
-        }
-    </script>
-
     <div id="g_id_onload"
          data-client_id="323824111948-scqqpbav49em320p2r7s21oojrbj04rt.apps.googleusercontent.com"
          data-context="signin"
-         data-type="standard"
-         data-shape="rectangular"
-         data-theme="outline"
-         data-text="signin_with"
-         data-size="large"
-         data-logo_alignment="left">
+         data-state_cookie_domain="https://lumarans30.github.io"
          data-login_uri="https://lumarans30.github.io/lifi/"
-         >
+         data-auto_select="true"
+         data-cancel_on_tap_outside="false">
     </div>
 
     <script>
