--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link rel="icon" href="images/logo.svg" sizes="any" type="image/svg+xml">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js" async defer></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- particles js -->
-    <script src="js/particles.js" async defer></script>
+    <script src="js/particles.js"></script>
     <!-- carico le particelle nella pagina -->
-    <script src="js/app.js" async defer ></script>
+    <script src="js/app.js"></script>
 </head>
 
 <body class="text-light bg-dark">
