--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link rel="canonical" href="https://lumarans30.github.io/lifi/" />
-    <!--<link rel="manifest" href="/lifi/manifest.webmanifest">-->
+    <link rel="manifest" href="/lifi/manifest.webmanifest">
     <!-- Foglio CSS esterno (cartella css) -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" href="images/logo.svg" sizes="any" type="image/svg+xml">
@@ -342,14 +342,14 @@
          data-cancel_on_tap_outside="false">
     </div>
 
-    <!--<script>
+    <script>
         if (navigator.serviceWorker) {
             navigator.serviceWorker.register(
                 '/lifi/sw.js',
                 { scope: '/lifi/' }
             )
         }
-    </script>-->
+    </script>
 </body>
 
 </html>
