--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
             </a>
         </li>
         <li id="navItem">
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <a class="oauth-container btn darken-4 white black-text" href="/users/google-oauth/" style="text-transform:none">
+                <div class="left">
+                    <img width="20px" style="margin-top:7px; margin-right:8px" alt="Google sign-in"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+                </div>
+                Login with Google
+            </a>
         </li>
     </nav>
 
