sign in (new version)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
         </li>
         <li id="navItem">
-            <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+            <div class="g_id_signin" data-type="standard"></div>
         </li>
     </nav>
 
@@ -345,7 +345,8 @@
          data-state_cookie_domain="https://lumarans30.github.io"
          data-login_uri="https://lumarans30.github.io/lifi/"
          data-auto_select="true"
-         data-cancel_on_tap_outside="false">
+         data-cancel_on_tap_outside="false"
+         data-callback="onSignIn">
     </div>
 
     <script>
