--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
         </li>
         <li class="navItem">
-            <div class="g_id_signin" data-type="standard"></div>
+            <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
         </li>
     </nav>
 
@@ -352,6 +352,7 @@
     <script>
         function onSignIn(googleUser) {
             // Useful data for your client-side scripts:
+            console.log("PROVA: " + googleUser);
             var profile = googleUser.getBasicProfile();
             console.log("ID: " + profile.getId()); // Don't send this directly to your server!
             console.log('Full Name: ' + profile.getName());
@@ -365,15 +366,7 @@
             console.log("ID Token: " + id_token);
         }
     </script>
-
-    <script>
-        if (navigator.serviceWorker) {
-            navigator.serviceWorker.register(
-                '/lifi/sw.js',
-                { scope: '/lifi/' }
-            )
-        }
-    </script>
+       
 </body>
 
 </html>
