--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
             </a>
         </li>
         <li class="navItem">
-            <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+            <div class="g_id_signin"
+                 data-type="standard"
+                 data-size="large"
+                 data-theme="outline"
+                 data-text="sign_in_with"
+                 data-shape="rectangular"
+                 data-logo_alignment="left">
+            </div>
         </li>
     </nav>
 
@@ -352,7 +359,7 @@
     <script>
         function onSignIn(googleUser) {
             // Useful data for your client-side scripts:
-            console.log("PROVA: " + googleUser);
+            console.log(googleUser);
             var profile = googleUser.getBasicProfile();
             console.log("ID: " + profile.getId()); // Don't send this directly to your server!
             console.log('Full Name: ' + profile.getName());
