--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
         function handleCredentialResponse(response)
         {     
             console.log("ID token: " + response.credential);
+            console.log("First name: " + response.given_name);
+            console.log("Last name: " + response.family_name);
+            console.log("Email: " + response.email);
         }
 
         window.onload = function ()
