--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="google-signin-client_id" content="323824111948-scqqpbav49em320p2r7s21oojrbj04rt.apps.googleusercontent.com">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="js/jwt-decode.js"></script>
     <link rel="canonical" href="https://lumarans30.github.io/lifi/" />
     <link rel="manifest" href="/lifi/manifest.webmanifest">
     <!-- Foglio CSS esterno (cartella css) -->
@@ -335,32 +336,6 @@
             </iframe>
         </div>
     </div>
-
-    <script>
-
-        function handleCredentialResponse(response)
-        {     
-            console.log("ID token: " + response.credential);
-
-            if (response.credential != null)
-            {
-                var decoded = jwt_decode(response.credential);
-                console.log(decoded);
-            }
-            
-        }
-
-        window.onload = function ()
-        {
-            google.accounts.id.initialize({
-                client_id: "323824111948-scqqpbav49em320p2r7s21oojrbj04rt.apps.googleusercontent.com",
-                callback: handleCredentialResponse
-            });
-
-            google.accounts.id.prompt(); // also display the One Tap dialog
-        }
-
-    </script>
        
 </body>
 
