--- a/index.html
+++ b/index.html
@@ -336,6 +336,14 @@
             </iframe>
         </div>
     </div>
+
+    <script>
+        function getInfo(token)
+        {
+            const decoded = jwt_decode(token);
+            console.log(decoded);
+        }
+    </script>
        
 </body>
 
